# awesomecalculator

./: pyproject.toml
.github/workflows/: build-pipeline.yml
awesome-calculator/: dedreira_awesomecalculator-1.0.0-py3-none-any.whl
src/brookec_awesomecalculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
